* time. The altitude listed in this airspace is the standard altitude,
* but ATCC may give you a different altitude.
* Beware of this when requesting air sport sectors
*
* ==========================================================================
* CHANGES
* ==========================================================================
* 2023 August 10 - CVG
* - Fixed missing small wavesectors around Bjorli and Oppdal

* 2023 August 7 - AMG
* - Automated process to process airspace from http://luftrom.info/
* - Airsport sectors have been separated out from their containing TMA/CTA.  This should help ensure that
*   you get warnings when leaving the airsport sector and further entering the TMA/CTA which has not been
*   opened (both vertically and horizontally)
* - Radio frequencies have been added to most controlled airspace.  Frequency is for the responsible
*   ATCC unit.  For airsport sectors which are opened from the ground, you will have to be on the frequency
*   of the ground station to fly there, not on the frequency listed in the airspace file.
* - Polaris has been sectorized into ATCC sectors with common frequency.  Names changed to include sector number and frequency.
* - Updated to AIP 125, removed Gullknapp TIZ, END548 - added END263, Farris TMA 14
* - Updated to AIP 126, updates to Flesland TMA, Ulven, Tjeldbergodden, Stureterminalen
* 
* 2023 April 25 - PML
* - New Airspace file based on http://luftrom.info/
* - New airspace file includes latest changes to airspaces (Norway --> Polaris  etc.)
* - Sweden airspace files removed
* - Frequencies are removed from airspace titles.
* - The following is added to AIP file: 
*            - Information and changelog
*            - New wave sectors (updated March 2022)
*            - Lower boundary of glider sectors and wave sectors are set to lower boundary of relevant airspace. 
*            - Rena danger area  replaced by Rena East/Mid/West according to local agreement