@@ -6,8 +6,9 @@ airsport_areas = {
     'Flesland TMA' : ['GULLFJELLET GLIDER AREA', 'KVAM TRANSIT AREA'],
     'WestCoast TMA' : ['KVAM TRANSIT AREA', 'GULLFJELLET GLIDER AREA'],
     'Værnes TMA' : ['MERÅKER'],
-    'Polaris CTA' : ['BJORLI WAVE', 'LESJA WAVE', 'DOVRE WAVE', 'OPPDAL WAVE', 'VAAGAA WAVE',
-                     'RONDANE WAVE', 'RINGEBU WAVE', 'JOTUNHEIMEN WAVE', 'TYNSET'],
+    'Polaris CTA' : ['EN D360 Bjorli', 'EN D359 Lesja', 'EN D358 Dovre', 'EN D357 Oppdal',
+                     'EN D163 Vågå', 'EN D162 Rondane', 'EN D161 Ringebu', 'EN D166 Jotunheimen'
+                     ],
     }
 
 airspace_frequencies = {
@@ -23,7 +24,6 @@ airspace_frequencies = {
     'Bardufoss TMA' : '118.80',
     'Bergen Lufthavn Flesland' : '119.10',
     'Berlevåg TIZ' : '120.10',
-    'Bjorli Wave 125.70' : '125.70',
     'Bodø CTR' : '118.10',
     'Bodø Lufthavn' : '118.05',
     'Bodø TMA' : '119.70',
@@ -34,9 +34,16 @@ airspace_frequencies = {
     'Båtsfjord TIZ' : '123.40',
     'Bø' : '124.35',
     'Bømoen Flyplass' : '123.50',
-    'Dovre Wave 125.70' : '125.70',
     'Drangedal' : '124.35',
     'EN D102 Østre Æra' : '121.35',
+    'EN D161 Ringebu' : '124.775',
+    'EN D162 Rondane' : '124.775',
+    'EN D163 Vågå' : '124.775',
+    'EN D166 Jotunheimen' : '124.70',
+    'EN D357 Oppdal' : '125.70',
+    'EN D358 Dovre' : '125.70',
+    'EN D359 Lesja' : '125.70',
+    'EN D360 Bjorli' : '125.70',
     'Eggemoen A' : '120.45',
     'Eggemoen B' : '120.45',
     'Eina' : '120.45',
@@ -79,7 +86,6 @@ airspace_frequencies = {
     'Hvittingfoss D' : '124.35',
     'Hvittingfoss E' : '124.35',
     'Jarlsberg' : '122.30',
-    'Jotunheimen Wave 124.70' : '124.70',
     'KVAM TRANSITAREA 121.0 / 123.5' : '121.00',
     'Karmøy CTR' : '120.50',
     'Kirkenes CTR' : '120.35',
@@ -91,7 +97,6 @@ airspace_frequencies = {
     'Kristiansand Lufthavn Kjevik' : '119.95',
     'Kvernberget CTR' : '121.20',
     'Leknes TIZ' : '120.50',
-    'Lesja Wave 125.70' : '125.70',
     'Lesja/Bjorli Flyplass' : '123.50',
     'Lofoten TMA' : '125.45',
     'Lunde' : '124.35',
@@ -103,7 +108,6 @@ airspace_frequencies = {
     'Namsos TIA' : '118.550',
     'Namsos TIZ' : '119.90',
     'Notodden TIZ' : '118.80',
-    'Oppdal Wave 125.70' : '125.70',
     'Oslo TMA' : '118.475',
     'Oslo TMA 2' : '120.45',
     'Oslo TMA 3' : '118.475',
@@ -133,9 +137,7 @@ airspace_frequencies = {
     'Rena EAST 135.30' : '135.30',
     'Rena MID 135.30' : '135.30',
     'Rena WEST 135.30' : '135.30',
-    'Ringebu Wave 124.775' : '124.775',
     'Rognan Flyplass' : '123.50',
-    'Rondane Wave 124.775' : '124.775',
     'Rygge CTR' : '119.50',
     'Rygge Flystasjon' : '119.50',
     'Røros TIA' : '120.40',
@@ -168,7 +170,6 @@ airspace_frequencies = {
     'Tromsø TMA' : '123.75',
     'Trondheim Lufthavn  Værnes' : '122.05',
     'Tynset' : '131,10',
-    'Vaagaa Wave 124.775' : '124.775',
     'Vadsø TIZ' : '118.40',
     'Valan TIZ' : '119.80',
     'Vardø TIZ' : '122.15',
