@@ -61,103 +61,3 @@ DP 60:23:22 N  005:55:00 E
 *
 *
 *BØLGESEKTORER
-AC W
-AN Ringebu Wave 124.775
-AL FL 95
-AH FL 185
-DP 61:41:25 N  010:01:25.0 E
-DP 61:44:06 N  010:22:40.0 E
-DP 61:20:10 N  010:19:58.0 E
-DP 61:20:10 N  009:57:35.0 E
-DP 61:41:25 N  010:01:25.0 E
-*
-*
-AC W
-AN Rondane Wave 124.775
-AL FL 135
-AH FL 225
-DP 62:00:00 N  009:41:38.0 E
-DP 62:00:00 N  010:24:00.0 E
-DP 61:44:06 N  010:22:40.0 E
-DP 61:41:25 N  010:01:25.0 E
-DP 61:38:04 N  010:00:49.0 E
-DP 62:00:00 N  009:41:38.0 E
-*
-*
-AC W
-AN Vaagaa Wave 124.775
-AL FL 135
-AH FL 225
-DP 61:53:55 N  008:25:43.0 E
-DP 62:00:00 N  008:49:33.0 E
-DP 62:00:00 N  009:41:38.0 E
-DP 61:38:04 N  010:00:49.0 E
-DP 61:20:10 N  009:57:35.0 E
-DP 61:20:10 N  009:23:20.0 E
-DP 61:50:45 N  008:19:59.0 E
-DP 61:53:55 N  008:25:43.0 E
-*
-*
-AC W
-AN Jotunheimen Wave 124.70
-AL FL 135
-AH FL 225
-DP 61:50:45 N  008:19:59.0 E
-DP 61:20:10 N  009:23:20.0 E
-DP 61:20:10 N  008:29:48.0 E
-DP 61:31:18 N  008:07:04.0 E
-DP 61:50:45 N  008:19:59.0 E
-*
-*
-AC W
-AN Oppdal Wave 125.70
-AL FL 115
-AH FL 225
-DP 62:50:00 N  009:04:58.6 E
-DP 62:50:00 N  010:10:00.0 E
-DP 62:00:00 N  010:10:00.0 E
-DP 62:00:00 N  009:41:38.0 E
-DP 62:25:00 N  009:13:54.0 E
-DP 62:25:00 N  008:39:09.0 E
-DP 62:40:20 N  008:39:09.0 E
-DP 62:50:00 N  009:04:58.6 E
-*
-*
-AC W
-AN Dovre Wave 125.70
-AL FL 135
-AH FL 225
-DP 62:25:00 N  008:39:09.0 E
-DP 62:25:00 N  009:13:54.0 E
-DP 62:00:00 N  009:41:38.0 E
-DP 62:00:00 N  008:54:15.0 E
-DP 62:25:00 N  008:39:09.0 E
-*
-*
-AC W
-AN Lesja Wave 125.70
-AL FL 135
-AH FL 225
-DP 62:25:00 N  008:14:50.0 E
-DP 62:25:00 N  008:39:09.0 E
-DP 62:00:00 N  008:54:15.0 E
-DP 62:00:00 N  008:49:33.0 E
-DP 61:53:55 N  008:25:43.0 E
-DP 62:25:00 N  008:14:49.6 E
-*
-*
-AC W
-AN Bjorli Wave 125.70
-AL 9500ft AMSL
-AH FL 225
-DP 62:25:00 N  007:59:34.0 E
-DP 62:25:00 N  008:14:50.0 E
-DP 61:53:55 N  008:25:43.0 E
-DP 61:50:45 N  008:19:59.0 E
-DP 62:00:00 N  008:00:20.0 E
-DP 62:08:40 N  007:45:25.0 E
-DP 62:25:00 N  007:59:34.0 E
-*
-*
-
-
